--- a/src/main/resources/templates/addEmployee.html
+++ b/src/main/resources/templates/addEmployee.html
@@ -20,6 +20,11 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
 		<a class="navbar-brand" href="/employees">Employee Management
 			System</a>
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item"><a class="nav-link" href="/employees">Employee
+					Management System
+			</a></li>
+		</ul>
 
 
 	</nav>
